--- a/app/src/main/res/layout/activity_sign_up_welcome.xml
+++ b/app/src/main/res/layout/activity_sign_up_welcome.xml
@@ -31,7 +31,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/step_2_to_3"
-            android:textSize="18sp"
+            android:textSize="16sp"
             android:layout_marginTop="10dp"
             android:textColor="@android:color/black"/>
 
@@ -42,22 +42,23 @@
             android:layout_marginTop="8dp"
             android:textColor="@android:color/black"
             android:textStyle="bold"
-            android:textSize="20sp"/>
+            android:textSize="18sp"/>
 
         <androidx.appcompat.widget.AppCompatTextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/text"
             android:textColor="@android:color/black"
-            android:textSize="18sp"
+            android:textSize="16sp"
             android:layout_marginTop="20dp"
             android:layout_marginBottom="20dp"/>
 
         <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/siginup_welcome_btn_continue"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/go_continue"
-            android:textSize="18sp"
+            android:textSize="16sp"
             android:background="@color/colorPrimary"
             android:textColor="@android:color/white"/>
 
